src/manipulator/snapshots/annatto__manipulator__align__tests__fail_deserialization_with_bad_query.snap
---
source: src/manipulator/align.rs
expression: group.err().unwrap()
---
TOML parse error at line 2, column 17
  |
2 |         query = "annis:tok @* doc"
  |                 ^^^^^^^^^^^^^^^^^^
Error with query:
[0:7-0:9] Unexpected token in query. Expected one of: ID
